# Rare

./: .gcloudignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOR_AGENT.md  FOR_PLATFORM.md  README.md  README.zh-CN.md  Rare.md  SECURITY.md  SUPPORT.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: docs_request.yml
.github/PULL_REQUEST_TEMPLATE/: rip.md
.github/workflows/: deploy-rare-core.yml  platform-kit-ts.yml  publish-platform-kit-ts.yml  publish-python-packages.yml  release-public-agent-sdk.yml  sync-public-oss.yml  tests.yml
.well-known/: rare-agent.json
apps/landing/: .env.example  AGENTS.md  AGENTS_EN.md  README.md  index.html  metadata.json  package-lock.json  package.json  wrangler.jsonc
apps/landing/content/: whitepaper.md
apps/landing/content/platform/: README.md  typescript.md
apps/landing/public/: _redirects  flows.md  parameter-explanations.md  rare-platform-integration.md  rare_sign.py  runtime-protocol.md  skill.md
apps/landing/scripts/: prerender.ts
apps/landing/src/: App.tsx  entry-server.tsx  index.css  main.tsx  page-registry.tsx  routes.ts  seo.ts  vite-env.d.ts
apps/landing/src/components/: BrandLogo.tsx
apps/landing/src/pages/: AboutPage.tsx  DocsPage.tsx  (+1 more)
docs/: contact-and-dashboard.md  deployment-gcp.md  open-source-overview.md  ops-inventory.md  oss-split-plan.md  platform-integration-flow.en.md  platform-integration-flow.zh.md  release-guide.md  release-sop.md  sdk-release.md  user-flow.en.md  user-flow.zh.md
docs/agent-native/: a2a.md  capability-attestations.md  mcp.md  overview.md
docs/gitbook/en/: README.md  SUMMARY.md
docs/gitbook/zh/: README.md  SUMMARY.md
docs/platform/: README.md  python.md  typescript.md
docs/rip/: RIP_INDEX.md  rip-0000-rip-process.md  rip-0001-identity-attestation.md  rip-0002-delegation.md  rip-0003-challenge-auth.md  rip-0004-key-rotation.md  rip-0005-platform-onboarding-and-events.md
docs/rip/drafts/: rip-draft-capability-and-skill-attestation.md  rip-draft-example-agent-proof-extension.md
docs/rip/test-vectors/: rip-v1-signing-inputs.json
docs/security/: invariants.md  threat-model.md
infra/gcp/terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
open-source/public-oss/rare-platform-ts/: CONTRIBUTING.md  SECURITY.md  STATUS.md  SUPPORT.md
public-oss/Rare/: README.md
public-oss/rare-platform-ts/: CODE_OF_CONDUCT.md  README.md  TRUST_MODEL.md
rare-agent-sdk-python/: README.md
rare-identity-core/: Dockerfile  README.md  pyproject.toml
rare-identity-core/docs/drafts/: rip-draft-example-agent-proof-extension.md
rare-identity-core/services/rare_api/: integrations.py  key_provider.py  main.py  service.py  state_store.py
rare-identity-core/tests/: conftest.py  test_core.py
rare-identity-protocol-python/: README.md  pyproject.toml
rare-identity-verifier-python/: README.md  pyproject.toml
rare-platform-kit-ts/: DEMO_FULL_LOGIN.md  E2E_TEST_REPORT_2026-03-14.md  EVENTS_GUIDE.md  FULL_MODE_GUIDE.md  QUICKSTART.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
rare-platform-kit-ts/.changeset/: README.md
rare-platform-kit-ts/examples/: http-minimal.ts
rare-platform-kit-ts/scripts/: demo_full_login.sh
rare-thirdparty-moltbook-example/: README.md  pyproject.toml
rare-thirdparty-moltbook-example/apps/: dev.py  runtime.py
rare-thirdparty-moltbook-example/apps/moltbook_api/: key_cache.py  main.py  service.py
rare-thirdparty-moltbook-example/examples/: platform_client.py
rare-thirdparty-moltbook-example/scripts/: run_local.sh
rare-thirdparty-moltbook-example/tests/: conftest.py  test_key_cache.py  test_platform_integration.py
scripts/: audit_deps.sh  check_repo_hygiene.py  export_skill_public_doc.py  lock_deps.sh  publish_public_repos.sh  run_local_stack.py  security_check.sh  show_stats.py  split_repos.sh  sync_public_repos.sh  test_all.sh  test_cov_all.sh  validate_rip_docs.py  verify_split_repos.sh
scripts/legacy/: split_repos.sh  verify_split_repos.sh
services/rare-identity-core/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/rare-identity-core/docs/: rip-0000-rip-process.md  rip-0001-identity-attestation.md  rip-0002-delegation.md  rip-0003-challenge-auth.md  rip-0004-key-rotation.md  rip-0005-platform-onboarding-and-events.md
services/rare-identity-core/docs/drafts/: rip-draft-example-agent-proof-extension.md
services/rare-identity-core/services/rare_api/: main.py  service.py
services/rare-identity-core/tests/: test_core.py
skills/rare-agent/: SKILL.md
skills/rare-agent-cli/: SKILL.md
skills/rare-agent-cli/agents/: openai.yaml
skills/rare-agent-cli/references/: flows.md
skills/rare-agent/agents/: openai.yaml
skills/rare-agent/references/: flows.md  parameter-explanations.md  runtime-protocol.md
skills/rare-agent/tests/: test_rare_sign.py
skills/rare-platform-integration/: SKILL.md
skills/rare-platform-integration/agents/: openai.yaml
skills/rare-platform-integration/references/: env-and-modes.md  express.md  fastapi.md  nextjs-app-router.md  python-generic.md  test-flow.md
(+76 files in other folders)
