[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rare-identity-protocol"
version = "0.1.0"
description = "Rare identity protocol primitives and signing helpers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
]
keywords = ["rare", "identity", "protocol", "ed25519", "jws"]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
]

[project.urls]
Homepage = "https://api.rareid.cc"
Repository = "https://github.com/0xsidfan/Rare"
Documentation = "https://github.com/0xsidfan/Rare/tree/main/rare-identity-protocol-python"
Issues = "https://github.com/0xsidfan/Rare/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rare_identity_protocol*"]
