[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rare-identity-verifier"
version = "0.1.0"
description = "Rare identity token verifier for Python platforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rare-identity-protocol>=0.1.0",
]
keywords = ["rare", "identity", "verifier", "delegation", "attestation"]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
]

[project.urls]
Homepage = "https://api.rareid.cc"
Repository = "https://github.com/0xsidfan/Rare"
Documentation = "https://github.com/0xsidfan/Rare/tree/main/rare-identity-verifier-python"
Issues = "https://github.com/0xsidfan/Rare/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rare_identity_verifier*"]
